Add more opens to Cosmos for integration testing in Java 9+